# checkers

./: .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  noxfile.py  pyproject.toml
.github/workflows/: lint.yml  tests.yml
backend/: Dockerfile  noxfile.py  pyproject.toml
backend/checkers_backend/: __init__.py  counters.py  models.py  store.py  utils.py
backend/tests/: test_backend.py  test_counters.py
frontend/: .gitignore  .prettierrc  Dockerfile  README.md  package-lock.json  package.json  webpack.config.js
frontend/public/: global.css
frontend/src/: App.svelte  counters.js  gameService.js  moves.js  stores.js
frontend/src/__tests__/: Button.test.js  SlotTest.svelte
frontend/src/components/: Board.svelte  Button.svelte  Controls.svelte  Counter.svelte  CreateGame.svelte  Crown.svelte  InviteModal.svelte  Loader.svelte  Square.svelte
frontend/src/stores/: counters.js  game.js  player.js
lib/: pyproject.toml
lib/checkers/: __init__.py
tests/: test_backend.py
