[tool.poetry]
name = "checkers-backend"
version = "0.1.0"
description = "Backend for the Checkers app"
authors = ["tcbegley <tomcbegley@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.61.1"
uvicorn = "^0.11.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.3"
isort = "^5.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
